edited text on homepage

--- a/blog/blog-post1.mdx
+++ b/blog/blog-post1.mdx
@@ -7,8 +7,10 @@ Two days ago I was cleaning someone's *teeth*, today, I begin my journey to beco
 
 Some of my **favorite** things are:
 
-* Running/Cycling
+* Running
+* Biking
 * Dogs
+* Traveling
 * Coffee
 * Red Wine
 * Craft Beer
